--- a/advancedcesar.html
+++ b/advancedcesar.html
@@ -15,6 +15,9 @@
                 <a class="list-group-item list-group-item-action active text-white" href="#">Advanced Cesar Cipher</a>
                 <a class="list-group-item list-group-item-action" href="playfaircipher.html">Play Fair Cipher</a>
                 <a class="list-group-item list-group-item-action" href="VigenereCipher.html">Vigenere Cypher</a>
+                <a class="list-group-item list-group-item-action" href="vernam.html">Vernam Cypher</a>
+                <a class="list-group-item list-group-item-action" href="autokey.html">Auto Key Cypher</a>
+                <a class="list-group-item list-group-item-action " href="sdes.html">Simplified DES</a>
             </div>
         </div>
         <div class="col-sm-6">
