--- a/sdes.html
+++ b/sdes.html
@@ -8,7 +8,7 @@
 
 <body style="overflow-x: hidden;">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <div class="row mt-3">
         <div class="col-sm-3 ml-3">
             <div id="list-example" class="list-group">
@@ -28,11 +28,11 @@
                     <p class="card-text" style="font-size:20px">Info About S DES</p>
                     <h4 class="card-title">Type the text you want to encode / decode</h4>
                     <div class="input-group input-group-lg">
-                        <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm" id="input" value="11010010">
+                        <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm" id="input" value="11010010" style="letter-spacing:10px">
                     </div>
                     <h4 class="card-title mt-3">Key</h4>
-                    <div class="input-group input-group">
-                        <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm" id="key" value="1001110101">
+                    <div class="input-group input-group-lg">
+                        <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm" id="key" value="1001110101" style="letter-spacing:10px">
                     </div>
                     
                     <h5 class="mt-3 text-primary"><span style="color: red">Note:</span> Plain text should be 8 bit boolean number</h5>
@@ -48,12 +48,12 @@
                             <tr>
                                 <td>
                                     <h4 id="inputstring">Plain Text</h4></td>
-                                <td id="plaintext"></td>
+                                <td id="plaintext" style="letter-spacing:10px"></td>
                             </tr>
                             <tr>
                                 <td>
                                     <h4 id="resultstring">Encoded Text</h4></td>
-                                <td id="encodedtext"></td>
+                                <td id="encodedtext" style="letter-spacing:10px"></td>
                             </tr>
                         </table>
                     </div>
