--- a/VigenereCipher.html
+++ b/VigenereCipher.html
@@ -12,7 +12,7 @@
     <div class="row mt-3">
         <div class="col-sm-3 ml-3">
             <div id="list-example" class="list-group">
-                <a class="list-group-item list-group-item-action" href="cesarcipher.html">Cesar Cipher</a>
+                <a class="list-group-item list-group-item-action" href="index.html">Cesar Cipher</a>
                 <a class="list-group-item list-group-item-action" href="advancedcesar.html">Advanced Cesar Cipher</a>
                 <a class="list-group-item list-group-item-action" href="playfaircipher.html">Play Fair Cipher</a>
                 <a class="list-group-item list-group-item-action active text-white" href="#">Vigenere Cypher</a>
